--- a/Lessons/les5/package.json
+++ b/Lessons/les5/package.json
@@ -15,5 +15,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.12.1"
   }
 }
