--- a/Lessons/frontend/.prettierrc
+++ b/Lessons/frontend/.prettierrc
@@ -1,6 +1,7 @@
 {
-	"trailingComma": "es5",
-	"tabWidth": 2,
-	"semi": false,
-	"singleQuote": true
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "semi": false,
+  "printWidth": 100,
+  "singleQuote": true
 }
