--- a/Lessons/2021/les1/package.json
+++ b/Lessons/2021/les1/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "les1",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^9.0.2",
-    "pg": "^8.6.0"
-  }
+	"name": "les1",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node index.js"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"dotenv": "^9.0.2",
+		"pg": "^8.6.0"
+	},
+	"devDependencies": {
+		"eslint": "^7.27.0"
+	}
 }
